; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-gd.c_ide_disk_put.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_ide-gd.c_ide_disk_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ide_disk_obj = type { i32, i32* }

@ide_disk_ref_mutex = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ide_disk_obj*)* @ide_disk_put to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ide_disk_put(%struct.ide_disk_obj* %0) #0 {
  %2 = alloca %struct.ide_disk_obj*, align 8
  %3 = alloca i32*, align 8
  store %struct.ide_disk_obj* %0, %struct.ide_disk_obj** %2, align 8
  %4 = load %struct.ide_disk_obj*, %struct.ide_disk_obj** %2, align 8
  %5 = getelementptr inbounds %struct.ide_disk_obj, %struct.ide_disk_obj* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  store i32* %6, i32** %3, align 8
  %7 = call i32 @mutex_lock(i32* @ide_disk_ref_mutex)
  %8 = load %struct.ide_disk_obj*, %struct.ide_disk_obj** %2, align 8
  %9 = getelementptr inbounds %struct.ide_disk_obj, %struct.ide_disk_obj* %8, i32 0, i32 0
  %10 = call i32 @put_device(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @ide_device_put(i32* %11)
  %13 = call i32 @mutex_unlock(i32* @ide_disk_ref_mutex)
  ret void
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @put_device(i32*) #1

declare dso_local i32 @ide_device_put(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
